# quik-deform

./: CMakeLists.txt  Constraint.h  OBJGenerator.cpp  OBJGenerator.h  PositionConstraint.cpp  QuikDeformer.cpp  QuikDeformer.h  README.md  SVD.cpp  SVD.h  StrainConstraint.cpp  StrainConstraint.h  TetStrainConstraint.cpp  TetStrainConstraint.h  TriangleStrainConstraint.cpp  TriangleStrainConstraint.h  VS linker setup.txt  global.h  initialize.h  main.cpp  quikDeformPlugin.sln
Houdini/: SphereWallCollision.hipnc
Models/: icosahedron.1.edge  icosahedron.1.ele  icosahedron.1.face  icosahedron.1.node  icosahedron.1.smesh  icosahedron.ply  sphere.1.edge  sphere.1.ele  sphere.1.face  sphere.1.node  sphere.1.smesh  tet.1.ele  tet.1.face  tet.1.node
Videos/: 600TetJiggle.mov  BallBounce.mov  BallBounceWithFriction_0.4.mov  ClothFreefallWithCornersHeld_E500.mov  ConstantWindBlowingCloth_E800.mov  CubeFreefallWithWindAndWall.mov  Cube_6tets_strainOnly.mov  Cube_PositionAndGround.mov  Cube_TwoPointsHeld.mov  Cube_TwoPointsHeld_InitialUpwardImpulse.mov  Cube_TwoPointsHeld_InitialUpwardImpulse_AltView.mov  FlagAndWind_WingMag30_E700.mov  FlagWithWindOscillation_E700.mov  FrictionTest_0.3.mov  GroundCollisionFirstTest.mov  HighStrain_E50000.mov  IcosahedronFreefall_E5000.mov  IcosahedronFreefall_E5000_999Tets.mov  IcosahedronFreefall_E5000_LowVolMax_244Tets.mov  OscillatingWindBlowingCloth_E800.mov  RandomCubeUnravel.mov  RandomCubeUnravel_E500000.mov  SphereFreefall_2024Tets_E50000.mov  SphereWallCollisionWithWind_E50000.mov  StrainConstraintTest1.mov  StrainConstraintTest_NoGrav.mov  StrainConstraintTest_NoGrav_BasicSVD.mov  Strain_E5000.mov  TetSwing_PosConstraint_StrainE5000.mov  WindFieldTest_WithStrainE5000.mov
quik-deform/: CMakeLists.txt  (+14 more)
(+43 files in other folders)
